# tera

./: .env.example  .gitignore  DEPLOY_HETZNER.md  Dockerfile  README.md  SOUL.md  cloudflare-env.d.ts  coolify.yaml  netlify.toml  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.typecheck.tsbuildinfo  wrangler.jsonc
.forge/: provider_config.json  provider_secret.key
app/: layout.tsx  loading.tsx  page.tsx  robots.ts  sitemap.ts
backend-server/: .env.example  Dockerfile  package.json  wrangler.toml
components/: AppLayout.tsx  AuthProvider.tsx  ContinueLaterQueue.tsx  ContinueLaterReminders.tsx  HomeRecentActivity.tsx  HomeWorkspaceOverview.tsx  ImageGallery.tsx  LimitModal.tsx  LoadingScreen.tsx  MainShell.tsx  MarkdownRenderer.tsx  OnboardingScreen.tsx  PaymentMethodModal.tsx  PromptShell.tsx  PromptStarterTemplates.tsx  QuickActionBar.tsx  QuickStartCards.tsx  QuickSwitcher.tsx  Sidebar.tsx  SkillMarketplace.tsx  SpreadsheetEditHistory.tsx  ThinkingProcess.tsx  ToolCard.tsx  ToolDetailPanel.tsx  UpgradePrompt.tsx  UsageHistoryChart.tsx  UsageMetricCard.tsx  UserMenu.tsx
docs/: BLOCKCHAIN_LAB_ARCHITECTURE.md  BLOCKCHAIN_LAB_CODEX_RULES.md  BLOCKCHAIN_LAB_MVP.md  FIRECRAWL_PROVIDER.md  GOOGLE_SEARCH_CONSOLE.md  NETLIFY_DEPLOY_FIX.md  TERA_API.md  TERA_API_BILLING.md  TERA_API_DOMAIN_ROUTING.md  TERA_API_EXAMPLES.md  TERA_API_RELEASE_CHECKLIST.md  TERA_BROWSER.md  WEB_CONTEXT_PROVIDERS.md  telegram-switch.md  video1-production-assets.md  video1-production-package.md  webhook-env.example  youtube-strategy.md
lib/: activation.ts  attachment.ts  auth.ts  auto-topup.ts  billing-refresh.ts  chat-mode.ts  seo.ts  (+30 more)
python/: README.md  pyproject.toml  run-bot.sh
python/talocode_tera.egg-info/: PKG-INFO  SOURCES.txt
python/tera/: __init__.py  __main__.py  agent.py  client.py
python/tera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+365 files in other folders)
